mdm: Fix svlte boot up crash
During boot up in SVLTE target we see a glitch in AP2MDM
err fatal gpio due to which 9K considers 8K apps has crashed
and pulls MDM2AP fatal gpio which results in a contradiction
crash. To overcome this glitch reverse the logic in mdm driver
to keep AP2MDM fatal gpio high during boot up & toggle the gpio
during panic prepare function.

Signed-off-by: Channagoud Kadabi <ckadabi@codeaurora.org>
(cherry picked from commit 92ead2b87b279d4f11f1e65aff1e1d75ca55fa07)

Change-Id: I82168ede19e1d793e09fa770d8c688d112ff5f0b
Signed-off-by: Gopal Goberu <ggober@codeaurora.org>

Conflicts:

	arch/arm/mach-msm/Kconfig

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2633,4 +2633,9 @@ config MSM_USE_USER_ACCESSIBLE_TIMERS
 	  Enables MSM-specific user accessible timers via a shared
 	  memory page containing the cycle counter.
 
+config MSM_8X60_FUSION_GPIO_GLITCH
+	tristate "Mask unexpected glitch during boot up"
+	help
+	  Enable masking of glitch during boot up, which helps in avoiding unwanted
+	  noise or s/w code from toggling the ap2mdm err fatal.
 endif
