msm: 8625: Add support for the M2A_2 fiq handler
The FIQ handler gets triggered when the M2A_2
interrupt is fired by the NON-HLOS. The  FIQ
handler saves the CPU context and helps in
debugging the watch dog timeout issues.

Signed-off-by: Prasad Sodagudi <psodagud@codeaurora.org>
(cherry picked from commit 7fbd9b77bfb8ee1b00e683bc487e62b7eef2bfb5)

Change-Id: I6fdf279419a51c7ab95e0f15549283964e40a971
Signed-off-by: Gopal Goberu <ggober@codeaurora.org>

Conflicts:

	arch/arm/mach-msm/Makefile

--- a/arch/arm/mach-msm/Makefile
+++ b/arch/arm/mach-msm/Makefile
@@ -386,6 +386,8 @@ obj-$(CONFIG_MSM_USE_USER_ACCESSIBLE_TIMERS) += timer_page.o
 ifdef CONFIG_MSM_CPR
 obj-$(CONFIG_DEBUG_FS) += msm_cpr-debug.o
 endif
+obj-$(CONFIG_MSM_FIQ) += msm7k_fiq.o
+obj-$(CONFIG_MSM_FIQ) += msm7k_fiq_handler.o
 obj-$(CONFIG_MSM_CPU_PWRCTL) +=  msm_cpu_pwrctl.o
 
 obj-$(CONFIG_ARCH_RANDOM) += early_random.o
