Add smartassH3 gov
Change-Id: I276e598d0626df03018d86b7aa726c47b99ec8e6

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -115,6 +115,12 @@ config CPU_FREQ_DEFAULT_GOV_SMARTASS2
 	help
 	  Use the CPUFreq governor 'smartassV2' as default.
 
+config CPU_FREQ_DEFAULT_GOV_SMARTASSH3
+	bool "SmartassH3"
+	select CPU_FREQ_GOV_SMARTASSH3
+	help
+	  Use the CPUFreq governor 'SmartassH3' as default.
+
 endchoice
 
 config CPU_FREQ_GOV_PERFORMANCE
@@ -219,6 +225,14 @@ config CPU_FREQ_GOV_SMARTASS2
 	  'smartassV2' - a "smart" optimized governor!
 
 	  If in doubt, say N.
+
+config CPU_FREQ_GOV_SMARTASSH3
+  tristate "'SmartassH3' cpufreq governor"
+  depends on CPU_FREQ
+  help
+    'SmartassH3' - a "smartassV2 with tweaks by H3ROS" governor!
+
+    If in doubt, say N.
 
 menu "x86 CPU frequency scaling drivers"
 depends on X86
