--- a/arch/arm/configs/cyanogenmod_c8813q_defconfig
+++ b/arch/arm/configs/cyanogenmod_c8813q_defconfig
@@ -1,7 +1,5 @@
-#
-# Automatically generated file; DO NOT EDIT.
-# Linux/arm 3.4.0 Kernel Configuration
-#
+# For building with dianlujitao's device code only!
+
 CONFIG_ARM=y
 CONFIG_ARM_HAS_SG_CHAIN=y
 CONFIG_SYS_SUPPORTS_APM_EMULATION=y
@@ -1055,7 +1053,7 @@ CONFIG_WEXT_CORE=y
 CONFIG_WEXT_PROC=y
 CONFIG_WEXT_SPY=y
 CONFIG_WEXT_PRIV=y
-CONFIG_CFG80211=m
+CONFIG_CFG80211=n
 CONFIG_NL80211_TESTMODE=y
 # CONFIG_CFG80211_DEVELOPER_WARNINGS is not set
 # CONFIG_CFG80211_REG_DEBUG is not set
@@ -1392,7 +1390,7 @@ CONFIG_PPP_DEFLATE=y
 CONFIG_PPP_FILTER=y
 CONFIG_PPP_MPPE=y
 CONFIG_PPP_MULTILINK=y
-CONFIG_PPPOE=m
+CONFIG_PPPOE=n
 CONFIG_PPPOLAC=y
 CONFIG_PPPOPNS=y
 CONFIG_PPP_ASYNC=y
