Add intensity (voltage) control to the vibrator driver

--- a/arch/arm/mach-msm/Kconfig
+++ b/arch/arm/mach-msm/Kconfig
@@ -2673,3 +2673,10 @@ config HUAWEI_KERNEL_DEBUG
 	default n
 	help
 	  Select Y if print HUAWEI log
+
+config HUAWEI_VIBRATOR_INTENSITY_SYSFS
+	bool "Huawei vibrator intensity sysfs"
+	depends on HUAWEI_SETTING_TIMER_FOR_VIBRATOR_OFF
+	default n
+	help
+	  Select Y to enable a sysfs for controlling the vibrator intensity (voltage).
