--- a/arch/arm/configs/c8813q_defconfig
+++ b/arch/arm/configs/c8813q_defconfig
@@ -40,7 +40,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="arm-eabi-"
-CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-kitkat"
+CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-mokee"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -2989,8 +2989,8 @@ CONFIG_EXT4_FS_XATTR=y
 # CONFIG_EXT4_FS_POSIX_ACL is not set
 CONFIG_EXT4_FS_SECURITY=y
 # CONFIG_EXT4_DEBUG is not set
-CONFIG_EXT4_HUAWEI_DEBUG=y
-CONFIG_EXT4_HUAWEI_READ_ONLY_RECOVERY=y
+# CONFIG_EXT4_HUAWEI_DEBUG is not set
+# CONFIG_EXT4_HUAWEI_READ_ONLY_RECOVERY is not set
 CONFIG_JBD=y
 # CONFIG_JBD_DEBUG is not set
 CONFIG_JBD2=y
