--- a/arch/arm/configs/c8813q_defconfig
+++ b/arch/arm/configs/c8813q_defconfig
@@ -40,7 +40,7 @@ CONFIG_IRQ_WORK=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE="arm-eabi-"
-CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-mokee"
+CONFIG_LOCALVERSION="$(KERNEL_LOCAL_VERSION)-cyanogenmod"
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
