--- a/arch/arm/configs/c8813q_defconfig
+++ b/arch/arm/configs/c8813q_defconfig
@@ -714,8 +714,8 @@ CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
-CONFIG_CPU_FREQ_GOV_SMARTASS2=y
-CONFIG_CPU_FREQ_GOV_SMARTASSH3=y
+# CONFIG_CPU_FREQ_GOV_SMARTASS2 is not set
+# CONFIG_CPU_FREQ_GOV_SMARTASSH3 is not set
 
 #
 # ARM CPU frequency scaling drivers
