--- a/arch/arm/configs/c8813q_defconfig
+++ b/arch/arm/configs/c8813q_defconfig
@@ -2229,7 +2229,7 @@ CONFIG_MSM_ACTUATOR=y
 CONFIG_QUP_EXCLUSIVE_TO_CAMERA=y
 # CONFIG_S5K3L1YX is not set
 # CONFIG_IMX091 is not set
-# CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE is not set
+CONFIG_MSM_V4L2_VIDEO_OVERLAY_DEVICE=y
 # CONFIG_OV7692 is not set
 # CONFIG_OV7695 is not set
 # CONFIG_OV7695_RAW is not set
@@ -2449,6 +2449,8 @@ CONFIG_FB_MSM_PANEL_NONE=y
 CONFIG_FB_MSM_DEFAULT_DEPTH_RGBA8888=y
 # CONFIG_FB_MSM_EBI2_EPSON_S1D_QVGA_PANEL is not set
 # CONFIG_FB_MSM_EBI2_PANEL_DETECT is not set
+# CONFIG_FB_MSM_QPIC_ILI_QVGA_PANEL is not set
+# CONFIG_FB_MSM_QPIC_PANEL_DETECT is not set
 CONFIG_FB_DYNAMIC_GAMMA=y
 CONFIG_FB_AUTO_CABC=y
 # CONFIG_EXYNOS_VIDEO is not set
